tell people not to tell me their passwords

--- a/templates/passkey.templ
+++ b/templates/passkey.templ
@@ -193,6 +193,10 @@ templ AddPasskeyForm(cc *protocol.CredentialCreation, sessionID uuid.UUID) {
 				}
 			}
 		</script>
+		<p>
+			Note that this is <strong>ABSOLUTELY NOT A PASSWORD!!!</strong>
+			<a class="text-ceriselight underline" href="https://www.yubico.com/resources/glossary/what-is-a-passkey/">What is a passkey?</a>
+		</p>
 		<div class="flex gap-2">
 			<input
 				placeholder="passkey name"
