--- a/templates/user.templ
+++ b/templates/user.templ
@@ -282,9 +282,16 @@ templ RequestAccount() {
 templ AccountRequestDone() {
 	@modal() {
 		<div class="p-8 flex flex-col gap-4">
-			<h1 class="text-2xl font-bold text-center capitalize pb-4">Account request complete</h1>
+			<h1 class="text-2xl font-bold text-center capitalize pb-4">
+				Account request complete
+			</h1>
 			<p>
-				Thank you for requesting an account. You will receive an E-mail when your request has been accepted or denied.
+				Thank you for requesting an account. You will receive an E-mail when your request
+				has been accepted or denied.
+			</p>
+			<p>
+				If you want to know the status of or expedite your account request your should
+				primarily contact the person you provided as reference.
 			</p>
 		</div>
 	}
