--- a/templates/user.templ
+++ b/templates/user.templ
@@ -220,7 +220,7 @@ templ RequestAccount() {
 		</header>
 		<form class="p-6 flex flex-col gap-4" hx-post="/request-account">
 			<label for="reference">
-				Reference: <span class="text-sm">(a person)</span>
+				Reference: <span class="text-sm">(a person who can vouch for you)</span>
 			</label>
 			<input type="text" id="reference" name="reference" required class={ input }/>
 			<label for="reason">
@@ -263,34 +263,17 @@ templ RequestAccount() {
 				<button class={ button }>Log in with KTH and submit request</button>
 			</div>
 			<div id="manual" style="display: none" class="flex flex-col gap-4">
-				<p>Unfortunately, this is not yet implemented, but the plan is to allow you to fill in your name and register a passkey.</p>
-				<div class="grayscale brightness-75 bg-neutral-800 p-4 rounded-md pointer-events-none select-none flex flex-col gap-4">
-					<div class="flex items-center gap-2">
-						<label for="first-name">First name</label>
-						<input type="text" id="first-name" name="first-name" required class={ input }/>
-					</div>
-					<div class="flex items-center gap-2">
-						<label for="family-name">Family name</label>
-						<input type="text" id="family-name" name="family-name" required class={ input }/>
-					</div>
-					<div class="flex items-center gap-2">
-						<label for="email">Email address</label>
-						<input type="text" id="email" name="email" required class={ input }/>
-					</div>
-					<div class="flex flex-col gap-2" id="shadowroothost">
-						// This is in a shadow DOM because otherwise little HTML gets confused that
-						// there is a form in a form.
-						<template shadowrootmode="open">
-							@base() {
-								<label for="passkey-name">
-									Register a passkey. This will be your only login method
-									in your account, but you will be able to add more once you get it.
-								</label>
-								@AddPasskeyForm(nil, uuid.Nil)
-							}
-						</template>
-					</div>
+				<div class="p-4 rounded-md flex flex-col gap-4">
+					<label for="kthid">kthid (if you remember)</label>
+					<input type="text" id="kthid" name="kthid" class={ input }/>
+					<label for="first-name">First name</label>
+					<input type="text" id="first-name" name="first-name" required class={ input }/>
+					<label for="family-name">Family name</label>
+					<input type="text" id="family-name" name="family-name" required class={ input }/>
+					<label for="email">Email address</label>
+					<input type="text" id="email" name="email" required class={ input }/>
 				</div>
+				<button class={ button }>Submit request</button>
 			</div>
 		</form>
 	}
@@ -299,9 +282,16 @@ templ RequestAccount() {
 templ AccountRequestDone() {
 	@modal() {
 		<div class="p-8 flex flex-col gap-4">
-			<h1 class="text-2xl font-bold text-center capitalize pb-4">Account request complete</h1>
+			<h1 class="text-2xl font-bold text-center capitalize pb-4">
+				Account request complete
+			</h1>
 			<p>
-				Thank you for requesting an account. You will receive an E-mail when your request has been accepted or denied.
+				Thank you for requesting an account. You will receive an E-mail when your request
+				has been accepted or denied.
+			</p>
+			<p>
+				If you want to know the status of or expedite your account request your should
+				primarily contact the person you provided as reference.
 			</p>
 		</div>
 	}
