only send email when specifying to when denying request

--- a/templates/admin_account_requests.templ
+++ b/templates/admin_account_requests.templ
@@ -41,7 +41,7 @@ templ AccountRequests(requests []database.AccountRequest) {
 								</button>
 								<button
 									class={ button }
-									hx-delete={ "/admin/account-requests/" + request.ID.String() + "?email" }
+									hx-delete={ "/admin/account-requests/" + request.ID.String() + "?send-email" }
 									hx-target="closest li"
 									hx-swap="outerHTML"
 								>
